--- a/traininf/taco_oweneutral_de.ini
+++ b/traininf/taco_oweneutral_de.ini
@@ -5,12 +5,12 @@
 [TRAIN]
 labelfile = /users/michael.pucher/data/aridialect/train-text-pac-oweonly.txt
 wavdir = /users/michael.pucher/data/aridialect/aridialect_wav16000/
-model_save_dir = Models/taco_owede
-taco_train_cache_name = taco_owede
+model_save_dir = Models/taco_oweneutralde
+taco_train_cache_name = taco_oweneutral
 pipeline = taco_aridialect 
 #at, at-lab, de, at-lab-owe-de
 language = de
-voicename = voice_dnn_owede
+voicename = voice_owe_taco_oweneutralde
 gpu_id = 0
 resume_checkpoint =
 resume = False
@@ -22,7 +22,7 @@ speaker_embedding = False
 hifi_model_dir = Models/HiFiGAN_aridialect
 #if no hifi_model is set, take highest model from hifi_model_dir
 hifi_model =
-output_dir = audios/taco_owede
+output_dir = audios/taco_taco_oweneutralde
 text = ../data/aridialect/owe_test.txt
 #if no model is set, take highest model from model_save_dir
 model =
