--- a/traininf/taco_owe_from_spo.ini
+++ b/traininf/taco_owe_from_spo.ini
@@ -10,9 +10,9 @@ taco_train_cache_name = taco_owe
 pipeline = taco_aridialect 
 #at, at-lab, de, at-lab-owe-de
 language = at-lab
-voicename = voice_dnn_owefromspo
+voicename = voice_owe_taco_owefromspo
 gpu_id = 0
-resume_checkpoint = Models/spo/checkpoint_20244.pt
+resume_checkpoint = Models/taco_spo/checkpoint_20244.pt
 resume = False
 finetune = True
 #speaker embedding type can be combined, ecapa, dvector, xvector, if not set no speaker embedding is used
