--- a/traininf/taco_owe_neutral.ini
+++ b/traininf/taco_owe_neutral.ini
@@ -3,17 +3,19 @@
 #train only with owe data and German labels
 
 [TRAIN]
-labelfile = /users/michael.pucher/data/aridialect/train-text-pac-oweonly+neutral.txt
-wavdir = /users/michael.pucher/data/aridialect/aridialect_wav16000/
+labelfile = /home/mipuc/data/aridialect/train-text-pac-oweonly+neutral.txt
+wavdir = /home/mipuc/data/aridialect/aridialect_wav16000/
 model_save_dir = Models/taco_oweneutral
 taco_train_cache_name = taco_oweneutral
 pipeline = taco_aridialect 
 #at, at-lab, de, at-lab-owe-de
 language = at-lab
-voicename = voice_dnn_oweneutral
+#add checkpointid at end of voice name
+voicename = voice_owe_taco_oweneutral
 gpu_id = 0
-resume_checkpoint =
-resume = False
+gpu_id = 0
+resume_checkpoint = Models/taco_oweneutral/checkpoint_36894.pt
+resume = True
 finetune = False
 speaker_embedding_type =
 speaker_embedding = False
