--- a/traininf/taco_spo.ini
+++ b/traininf/taco_spo.ini
@@ -3,12 +3,12 @@
 [TRAIN]
 labelfile = /home/mipuc/data/aridialect/train-text-pac-spo.txt
 wavdir = /home/mipuc/data/aridialect/aridialect_wav16000/
-model_save_dir = Models/spo
+model_save_dir = Models/taco_spo
 taco_train_cache_name = taco_spo
 pipeline = taco_aridialect 
 #at, at-lab, de
 language = at-lab
-voicename = voice_dnn_spo
+voicename = voice_spo_taco_spo
 gpu_id = 0
 resume_checkpoint =
 resume = False
