--- a/traininf/taco_owe_geteilt.ini
+++ b/traininf/taco_owe_geteilt.ini
@@ -10,7 +10,7 @@ taco_train_cache_name = taco_owegeteilt
 pipeline = taco_aridialect 
 #at, at-lab, de, at-lab-owe-de
 language = at-lab
-voicename = voice_dnn_owegeteilt
+voicename = voice_owe_taco_owegeteilt
 gpu_id = 0
 resume_checkpoint =
 resume = False
