--- a/traininf/taco_owe_geteilt.ini
+++ b/traininf/taco_owe_geteilt.ini
@@ -3,8 +3,8 @@
 #train only with owe data and German labels
 
 [TRAIN]
-labelfile = /users/michael.pucher/data/aridialect/train-text-pac-oweonlygeteilt.txt
-wavdir = /users/michael.pucher/data/aridialect/aridialect_wav16000/
+labelfile = /home/mipuc/data/aridialect/train-text-pac-oweonlygeteilt.txt
+wavdir = /home/mipuc/data/aridialect/aridialect_wav16000/
 model_save_dir = Models/taco_owegeteilt
 taco_train_cache_name = taco_owegeteilt
 pipeline = taco_aridialect 
