--- a/traininf/taco_owe_geteiltneutral.ini
+++ b/traininf/taco_owe_geteiltneutral.ini
@@ -3,8 +3,8 @@
 #train only with owe data and German labels
 
 [TRAIN]
-labelfile = /users/michael.pucher/data/aridialect/train-text-pac-oweonlygeteilt+neutral.txt
-wavdir = /users/michael.pucher/data/aridialect/aridialect_wav16000/
+labelfile = /home/mipuc/data/aridialect/train-text-pac-oweonlygeteilt+neutral.txt
+wavdir = /home/mipuc/data/aridialect/aridialect_wav16000/
 model_save_dir = Models/taco_owegeteiltneutral
 taco_train_cache_name = taco_owegeteiltneutral
 pipeline = taco_aridialect 
@@ -17,6 +17,7 @@ resume = False
 finetune = False
 speaker_embedding_type =
 speaker_embedding = False
+use_gst = False
 
 [INF]
 hifi_model_dir = Models/HiFiGAN_aridialect
