--- a/traininf/taco_owe_neutral_de.ini
+++ b/traininf/taco_owe_neutral_de.ini
@@ -14,7 +14,7 @@ language = de
 voicename = voice_owe_taco_oweneutralde
 gpu_id = 0
 resume_checkpoint =
-resume = False
+resume = True
 finetune = False
 speaker_embedding_type =
 speaker_embedding = False
