--- a/traininf/taco_oweneutral_de.ini
+++ b/traininf/taco_oweneutral_de.ini
@@ -17,6 +17,7 @@ resume = False
 finetune = False
 speaker_embedding_type =
 speaker_embedding = False
+use_gst = False
 
 [INF]
 hifi_model_dir = Models/HiFiGAN_aridialect
