--- a/traininf/web.ini
+++ b/traininf/web.ini
@@ -7,7 +7,7 @@ labelfile = /users/michael.pucher/data/aridialect/train-text-pac-oweonly.txt
 wavdir = /users/michael.pucher/data/aridialect/aridialect_wav16000/
 model_save_dir = Models/taco_oweneutralde
 taco_train_cache_name = taco_oweneutral
-pipeline = taco_aridialect 
+pipeline = taco_aridialect
 #at, at-lab, de, at-lab-owe-de
 language = de
 voicename = voice_owe_taco_oweneutralde
@@ -17,6 +17,7 @@ resume = False
 finetune = False
 speaker_embedding_type =
 speaker_embedding = False
+use_gst = False
 
 [INF]
 hifi_model_dir = Models/HiFiGAN_aridialect
