--- a/traininf/taco_owe_neutralemotional.ini
+++ b/traininf/taco_owe_neutralemotional.ini
@@ -3,18 +3,18 @@
 #train only with owe data and German labels
 
 [TRAIN]
-labelfile = /home/mipuc/data/aridialect/train-text-pac-oweonly+neutral.txt
+labelfile = /home/mipuc/data/aridialect/train-text-pac-oweonly+neutral+emotional.txt
 wavdir = /home/mipuc/data/aridialect/aridialect_wav16000/
-model_save_dir = Models/taco_oweneutralde
-taco_train_cache_name = taco_oweneutralde
+model_save_dir = Models/taco_oweneutralemotional
+taco_train_cache_name = taco_oweneutralemotional
 pipeline = taco_aridialect 
 #at, at-lab, de, at-lab-owe-de
-language = de
+language = at-lab
 #add checkpointid at end of voice name
-voicename = voice_owe_taco_oweneutralde
+voicename = voice_owe_taco_oweneutralemotional
 gpu_id = 0
 resume_checkpoint =
-resume = True
+resume = False
 finetune = False
 speaker_embedding_type =
 speaker_embedding = False
@@ -24,7 +24,7 @@ use_gst = False
 hifi_model_dir = Models/HiFiGAN_aridialect
 #if no hifi_model is set, take highest model from hifi_model_dir
 hifi_model =
-output_dir = audios/taco_oweneutralde
+output_dir = audios/taco_oweneutralemotional
 text = ../data/aridialect/owe_test.txt
 #if no model is set, take highest model from model_save_dir
 model =
