--- a/traininf/taco_owe_neutral.ini
+++ b/traininf/taco_owe_neutral.ini
@@ -13,12 +13,12 @@ language = at-lab
 #add checkpointid at end of voice name
 voicename = voice_owe_taco_oweneutral
 gpu_id = 0
-gpu_id = 0
 resume_checkpoint = Models/taco_oweneutral/checkpoint_36894.pt
 resume = True
 finetune = False
 speaker_embedding_type =
 speaker_embedding = False
+use_gst = False
 
 [INF]
 hifi_model_dir = Models/HiFiGAN_aridialect
